Bug 978767 - Hovering over the zoom controls and cut/copy/paste in the menu makes the panel layout jump on Linux. r=mconley
UltraBlame original commit: 8f7a0ade859c914355d409e0bdd3fbc9f22f77ab

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -820,14 +820,9 @@ toolbarpaletteitem[place="palette"] > #search-container {
 }
 
 .toolbaritem-combined-buttons@inAnyPanel@ > separator {
-  
-
-
-
-
-
-  margin: calc(0.5em - 1px) 0;
+  margin: .5em 0;
   width: 1px;
+  height: auto;
   background: hsla(210,4%,10%,.15);
   transition-property: margin;
   transition-duration: 10ms;
